Use MXID classes instead of the plain String.